2010-01-27  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonReader.cs : use decimal instead of int to parse decimal part
	  of numeric value. It can parse bigger value than int now (like
	  tweet id).

2009-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonReader.cs : \uXXXX parser was totally wrong, giving wrong #.

2009-09-22  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonValue.cs, JsonReader.cs, JsonPrimitive.cs :
	  Handle "null" values, as string, so far (haven't tried what .NET
	  actually does).
	  Fix array ToString() that missed commas (while Save() worked fine -
	  it has different serialization logic).

2009-01-15  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonReader.cs : consume ',' between items in an array.

2008-09-15  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonObject.cs, JsonValue.cs : SL2b2 updates.

2008-08-28  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonReader.cs : a ReadChar() is missing in number parsing.

2008-06-10  Atsushi Enomoto  <atsushi@ximian.com>

	* JsonArray.cs, JsonObject.cs, JsonPrimitive.cs, JsonReader.cs,
	  JsonType.cs, JsonValue.cs, MergedEnumerator.cs : initial checkin.
